--- a/index.css
+++ b/index.css
@@ -155,6 +155,82 @@ nav p{
     height: 35px;
     width: 35px;
     border-radius: 50%;
+}
+main {
+    width: 100%;
+    height: 100%;
+    padding: 35px 15px;
+    border-top: 1px solid #ddd;
+    overflow-y: auto;
+}
+.videos-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
 
+}
+.video{
+    width: 330px;
+    margin-bottom: 40px;
+    cursor: pointer;
 
+}
+.thumbnail{
+    width: 100%;
+    height: 187px;
+    margin-bottom: 12px;
+
+}
+.thumbnail img{
+    width: 100%;
+    height: 100%;
+
+}
+.creator-img img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 12px;
+
+}
+.video-details{
+    display: flex;
+
+}
+.title{
+    display: flex;
+    flex-direction: column;
+
+}
+.title a{
+    text-decoration: none;
+
+}
+.video-title{
+    color: rgb(3, 3, 3);
+    font-size: 1.6rem;
+    max-width: 278px;
+    font-weight: 500;
+    line-height: 2.2rem;
+    margin-bottom: 4px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    
+}
+.video-creator, .title span {
+    color:rgb(96, 96, 96)
+    font-size: 1.4rem;
+    line-height: 2rem;
+    font-weight: 400;
+}
+
+.video-creator:hover{
+    color: black;
+
+}
+.video img{
+    border-radius: 8px;
 }
